# AgentPEP

./: .gitignore  AgentPEP_Hook_Enhancement_PRD_v2.md  AgentPEP_Hook_Enhancement_Sprint_Plan_v2.md  AgentPEP_PRD_SprintPlan.md  AgentPEP_PRD_SprintPlan_v1.4.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v2.1.md  docker-compose.yml
agentrt/: __init__.py  conftest.py  pyproject.toml
agentrt/suites/: __init__.py  bypass_complexity.py  bypass_config_injection.py  bypass_hook_gaming.py  bypass_reasoning_boundary.py  e2e_aapm_agentpep_trustsoc.py
backend/: .dockerignore  Dockerfile  SECURITY_REVIEW.md  pyproject.toml
backend/app/: grpc_service.py  main.py
backend/app/backends/: __init__.py  apikey_auth.py  audit.py  audit_verbosity.py  auth.py  auth_registry.py  cloudwatch_audit.py  datadog_audit.py  kafka_audit.py  loki_audit.py  mongodb_audit.py  mongodb_storage.py  mtls_auth.py  notification.py  notification_registry.py  oauth2_auth.py  pagerduty_channel.py  redis_storage.py  saml_auth.py  storage.py  teams_channel.py
backend/app/cli/: __init__.py  verify_context.py  verify_receipts.py
backend/proto/: intercept.proto
backend/tests/: conftest.py  test_complexity_budget.py  test_console.py  test_health.py  test_intercept.py  test_policy_bundle_version.py  test_policy_events.py  test_policy_loader.py  test_policy_poll.py  test_policy_trusted_key.py  test_policy_webhook.py  test_posture_matrix.py  test_rbac_engine.py  test_rbac_property.py  test_sprint10_audit_engine.py  test_sprint10_load.py  test_sprint11_rate_limit_validators.py  test_sprint12_mcp_proxy.py  test_sprint15_agent_registry.py  test_sprint16_dashboard.py  test_sprint17_audit_explorer.py  test_sprint18_escalation.py  test_sprint19_simulation.py  test_sprint22_compliance.py  test_sprint23_performance.py  test_sprint24_redteam.py  test_sprint24_security.py  test_sprint26_observability.py  test_sprint29_backends.py  test_sprint30_yaml_policy.py  test_sprint31_auth_providers.py  test_sprint31_data_classification.py  test_sprint31_redis_backend.py  test_sprint32_audit_backends.py  test_sprint32_audit_verbosity.py  test_sprint32_integration.py  test_sprint32_notifications.py  test_sprint32_receipts.py  test_sprint33_context_authority.py  test_sprint33_foundation.py  (+85 more)
sdk/: pyproject.toml
sdk/agentpep/: __init__.py  cli.py  client.py  decorator.py  exceptions.py  execution_token.py  health_check.py  middleware.py  models.py  offline.py  policy_bundle.py  policy_migration.py  receipt_verify.py  redteam.py  simulation_compare.py  tamper_detection.py  tool_trust_session.py  tooltrust_bridge.py  yolo_detector.py
sdk/tests/: test_autogen.py  test_client.py  test_crewai.py  test_decorator.py  test_health_check.py  test_langgraph.py  test_middleware.py  test_offline.py  test_offline_enhanced.py  test_openai_agents.py  test_semantic_kernel.py  test_sprint30_offline_enhanced.py  test_sprint33_integration.py  test_sprint33_langgraph.py  test_sprint33_openai_agents.py  test_sprint34_cli.py  test_sprint43_tool_trust_session.py  test_sprint46_fetch_safe.py  test_sprint54_cis_scan.py  test_sprint56_yolo_probe.py  test_taint_client.py
(+514 files in other folders)
