[project]
name = "agentrt"
version = "0.1.0"
description = "AgentRT — AgentPEP Bypass Regression Test Harness (Sprint S-E09)"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mongomock-motor>=0.0.34",
    "cryptography>=43.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentrt*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["suites"]
python_files = ["bypass_*.py", "e2e_*.py", "test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
