[project]
name = "agentpep-sdk"
version = "1.0.0"
description = "AgentPEP Python SDK — Enforce decorator, LangChain, CrewAI, Semantic Kernel integration, taint labelling"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3.0",
]
openai-agents = [
    "openai-agents>=0.1.0",
]
autogen = [
    "pyautogen>=0.2.0",
]
crewai = [
    "crewai>=0.80.0",
]
semantic-kernel = [
    "semantic-kernel>=1.0.0",
]
fastapi = [
    "starlette>=0.40.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "starlette>=0.40.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
